# HackAnton2023

./: README.md
.github/workflows/: main.yml
backend/: .editorconfig  .gitignore  README.md  postman.json
backend/admin/: Dockerfile  pyproject.toml
backend/admin/app/: entrypoint.sh
backend/admin/app/admin/: asgi.py  models.py  settings.py  wsgi.py
backend/admin/app/broadcast/: admin.py  constants.py  db_router.py  models.py
backend/admin/app/challenge/: admin.py  constants.py  db_router.py  models.py
backend/admin/app/event/: admin.py  constants.py  db_router.py  models.py
backend/admin/app/user/: admin.py  constants.py  db_router.py  models.py
backend/deploy/: docker-compose.yaml  dump.sh
backend/deploy/config/: .env.sample  nginx.conf
backend/services/: build.gradle.kts  settings.gradle.kts
backend/services/broadcast/: build.gradle.kts
backend/services/challenge/: build.gradle.kts
backend/services/config/: build.gradle.kts
backend/services/discovery/: build.gradle.kts
backend/services/event-v2/: Containerfile  (+1 more)
checker/: README.md
frontend/: Containerfile  next.config.js  package-lock.json  package.json
telegram/deploy/: docker-compose.yml
telergam/: pyproject.toml
web_admin/: index.html  nicepage.css  Задачи.css  Задачи.html  Команды.css  Команды.html  Литература-2.css  Литература-2.html  Пользователи.css  Пользователи.html  Редактировать-команду.css  Редактировать-команду.html  Создать-задачу.css  Создать-задачу.html
web_admin/blog/: blog.html  пост-1.html  пост-2.html  пост-3.html  пост-4.html  пост-5.html  пост.html
(+197 files in other folders)
